cluster/personal/mail/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: mail
    app.kubernetes.io/version: 16.0.0
  name: mail
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mail
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mail
        app.kubernetes.io/version: 16.0.0
    spec:
      automountServiceAccountToken: false
      containers:
      - image: ghcr.io/docker-mailserver/docker-mailserver:16.0.0@sha256:5961d79488def84b030a2e164168dd64fb262ac6a2393a4f77b3ceebe5261d4f
        name: mail
        ports:
        - containerPort: 25
          name: smtp
        - containerPort: 587
          name: submission
        - containerPort: 143
          name: imap
        volumeMounts:
        - mountPath: /var/mail
          subPath: mail
          name: data-volume
        - mountPath: /var/mail-state
          subPath: state
          name: data-volume
        - mountPath: /var/log/mail
          subPath: log
          name: data-volume
        - mountPath: /tmp/docker-mailserver/postfix-accounts.cf
          subPath: postfix-accounts.cf
          name: accounts-volume
          readOnly: true
        - mountPath: /tmp/docker-mailserver/postfix-main.cf
          subPath: postfix-main.cf
          name: config-volume
          readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 1Gi
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: mail-pvc
      - name: config-volume
        configMap:
          name: mail-config
      - name: accounts-volume
        secret:
          secretName: mail-accounts-secret
