cluster/personal/mail/roundcube-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: roundcube
    app.kubernetes.io/version: 1.7.3-apache-nonroot
  name: roundcube
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: roundcube
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: roundcube
        app.kubernetes.io/version: 1.7.3-apache-nonroot
    spec:
      imagePullSecrets:
      - name: forgejo-registry-secret
      automountServiceAccountToken: false
      containers:
      - image: roundcube/roundcubemail:1.7.3-apache-nonroot@sha256:c018c84f59872905c1b8da9326bf2aece4ce3ea87add7de03f16850d3a830f7a
        name: roundcube
        ports:
        - containerPort: 8000
          name: http
        volumeMounts:
        - mountPath: /var/roundcube/db
          name: roundcube-db-volume
        - mountPath: /var/roundcube/config
          name: roundcube-config-volume
          readOnly: true
        - mountPath: /var/roundcube/oidc
          name: roundcube-oidc-volume
          readOnly: true
        - mountPath: /pennant-skin
          name: pennant-skin-volume
          readOnly: true
        - mountPath: /entrypoint-tasks/post-setup
          name: pennant-task-volume
          readOnly: true
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsUser: 33
          runAsGroup: 33
          allowPrivilegeEscalation: false
      volumes:
      - name: roundcube-db-volume
        persistentVolumeClaim:
          claimName: roundcube-pvc
      - name: roundcube-config-volume
        configMap:
          name: roundcube-config
      - name: roundcube-oidc-volume
        secret:
          secretName: mail-oidc-secret
          optional: true
      - name: pennant-scripts-volume
        configMap:
          name: roundcube-pennant-skin
      - name: pennant-skin-volume
        emptyDir: {}
      - name: pennant-task-volume
        configMap:
          name: roundcube-pennant-skin
          items:
          - key: roundcube-skin-install.sh
            path: pennant-skin.sh
          defaultMode: 365
