cluster/personal/mail/roundcube-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: roundcube
    app.kubernetes.io/version: sha256_c018c84f59872
  name: roundcube
spec:
  selector:
    app.kubernetes.io/name: roundcube
  ports:
  - name: http
    port: 8000
    targetPort: 8000
