cluster/personal/mail/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: mail
    app.kubernetes.io/version: 16.0.0
  name: mail
spec:
  selector:
    app.kubernetes.io/name: mail
  ports:
  - name: smtp
    port: 25
    targetPort: 25
  - name: submission
    port: 587
    targetPort: 587
  - name: imap
    port: 143
    targetPort: 143
